# robotics

./: .gitignore  comms.md  src.data  srcd.posegraph
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/custom_messages/: Num.h
devel/include/parameter_test/: parametersConfig.h
devel/include/service/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
devel/lib/custom_messages/: pub_custom  sub_custom
devel/lib/parameter_test/: param_first  param_second
devel/lib/pkgconfig/: custom_messages.pc  first_project.pc  parameter_test.pc  pub_sub.pc  pub_sub_same.pc  pub_sub_test.pc  service.pc  tf_examples.pc  timer.pc
devel/lib/pub_sub/: pub  sub
devel/lib/pub_sub_same/: test_pub  test_sub
devel/lib/python3/dist-packages/custom_messages/msg/: _Num.py
devel/lib/python3/dist-packages/parameter_test/cfg/: parametersConfig.py
devel/lib/service/: add_two_int  client
devel/lib/tf_examples/: get_tf  tf_pub
devel/lib/timer/: timed_pub
devel/share/custom_messages/cmake/: custom_messages-msg-extras.cmake  custom_messages-msg-paths.cmake  custom_messagesConfig.cmake
devel/share/first_project/cmake/: first_projectConfig.cmake
devel/share/parameter_test/cmake/: parameter_testConfig.cmake
devel/share/parameter_test/docs/: parametersConfig-usage.dox
devel/share/pub_sub/cmake/: pub_subConfig.cmake
devel/share/pub_sub_same/cmake/: pub_sub_sameConfig.cmake
devel/share/pub_sub_test/cmake/: pub_sub_testConfig.cmake
devel/share/roseus/ros/custom_messages/: manifest.l
devel/share/roseus/ros/service/: manifest.l
devel/share/service/cmake/: serviceConfig.cmake
devel/share/tf_examples/cmake/: tf_examplesConfig.cmake
devel/share/timer/cmake/: timerConfig.cmake
docker/: Dockerfile  build-docker-image.ps1  run-ros.ps1  run-vnc.ps1
src/: process_bag.py
src/asynch/: CMakeLists.txt  package.xml
src/asynch/src/: asynch_sub.cpp  pub.cpp  standard_sub.cpp
src/custom_messages/: CMakeLists.txt
src/custom_messages/src/: pub.cpp  sub.cpp
src/demo_mapping/: CMakeLists.txt  package.xml
src/demo_mapping/launch/: gmapping.launch  slam_toolbox.launch  slam_toolbox_default.launch  slam_toolbox_localization.launch
src/demo_mapping/maps/: map.pgm
src/fibonacci/: CMakeLists.txt  package.xml
src/fibonacci/launch/: launcher.launch  launcher2.launch
src/fibonacci/src/: fibonacci_client.cpp  fibonacci_client2.cpp  fibonacci_server.cpp
src/first_project/:  info.txt  CMakeLists.txt  lidar copy.rviz  lidar.rviz  package.xml  review.md
src/first_project/cfg/: lidarparameters.cfg
src/first_project/docs/: index.md  plot_jugler_config.xml
src/first_project/launch/: auto.launch  launch.launch
src/first_project/src/: gps_to_odom.cpp  lidar_select.cpp  odom_to_tf.cpp  odom_to_tf.cppobj
src/message_filters/: CMakeLists.txt  package.xml
src/message_filters/src/: pub.cpp  sub.cpp  sub_pol.cpp
src/nav2d_conf/launch/: amcl.launch.xml  turtlebot_amcl.launch  turtlebot_gmapping.launch
src/nodelet_example/: CMakeLists.txt  nodelet_plugin.xml  package.xml
src/nodelet_example/launch/: launch.launch
src/nodelet_example/src/: Nodelets.cpp
src/parameter_test/: CMakeLists.txt  package.xml
src/parameter_test/cfg/: parameters.cfg
src/parameter_test/launch/: param_set.launch
src/parameter_test/src/: param_first.cpp  param_second.cpp
src/pub_latched/: CMakeLists.txt  package.xml
src/pub_latched/launch/: launcher.launch
src/pub_latched/src/: pub.cpp
src/pub_sub/: CMakeLists.txt  package.xml
src/pub_sub/src/: pub.cpp  sub.cpp
src/pub_sub_same/: CMakeLists.txt  package.xml
src/pub_sub_same/src/: test_pub.cpp  test_sub.cpp
src/pub_sub_test/: CMakeLists.txt  package.xml
src/second_project/: CMakeLists.txt  description.md  juggler.xml  lidar.rviz  lidar2.rviz  lidar2st.rviz  package.xml
src/second_project/action/: Slam.action
src/second_project/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
src/second_project/config/: mapper_params_online_async.yaml  mapper_params_online_async_default.yaml  mapper_params_online_async_localization.yaml
src/second_project/docs/: description.md
src/second_project/launch/: amcl.launch.xml  task1.launch  task2.launch  task2_amcl.launch  task2_amcl.launchno  task2_st.launch
src/second_project/map/: 25may.yaml  map.pgm  map.world  map.yaml  map_cleaned.pgm  scout.inc
src/second_project/src/: goalpub.cpp  odom_to_tf.cpp  tf_change.cpp
src/second_project/stage/: map.world  scout.inc
src/service/: CMakeLists.txt
src/service/src/: add_two_int.cpp  client.cpp
src/stage/: turtlebot.inc
src/stage/maps/: map.yaml  mapex.png.pgm  mapex.png.yaml  mapex.yaml
src/tests/: a.out  circle.cpp
src/tf/: CMakeLists.txt
src/tf/launch/: turtle.launch
src/tf/src/: get_tf.cpp  pub.cpp
src/timer/: CMakeLists.txt  package.xml
src/timer/src/: pub.cpp
src/trash/: 25may.pgm  odom_to_tf.cppobj
src/trash/secondpr/: task2.launch
(+13 files in other folders)
